--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "bcryptjs-react": "^2.4.6",
     "cors": "^2.8.5",
     "react": "^18.2.0",
+    "react-axios": "^2.0.6",
     "react-dom": "^18.2.0",
     "react-google-charts": "^4.0.1",
     "react-icons": "^5.0.1",
